--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -50,78 +50,83 @@
     "enterTokenHere": "Token hier eingeben",
     "token": "Token",
     "clearCache": "Cache leeren",
-    "developerModeEnabled": "🔧 Entwicklermodus aktiviert! Debug Menu Tab ist jetzt verfügbar!",
     "activeTabs": "Aktive Tabs",
-    "hiddenTabs": "Versteckte Tabs",
-    "error": "Fehler",
-    "startDiscussion": "Diskussion starten",
-    "send": "SENDEN",
-    "translateContent": "Inhalt übersetzen",
-    "sensitiveContent": "Sensible Inhalte",
-    "updateYourNickname": "Ihren Spitznamen aktualisieren",
-    "yourNickname": "Ihr Spitzname",
-    "create": "Schreiben",
-    "yourFolderName": "Ihr Ordnername",
-    "noMindsInSelectedPeriod": "Keine Notizen im ausgewählten Zeitraum",
-    "noMindsForPeriod": "Keine Notizen für diesen Zeitraum",
-    "selectPeriod": "Zeitraum auswählen...",
-    "digest": "Zusammenfassung",
-    "minds": "Notizen",
-    "searchForYourNotes": "Ihre Notizen durchsuchen",
-    "searchYourEmoji": "Ihr Emoji suchen...",
-    "writeSomething": "Schreiben Sie etwas...",
-    "topMinds": "Top Notizen",
-    "todayMinds": "Heutige Notizen",
-    "randomMind": "Zufällige Notiz",
-    "spectrum": "Spektrum",
-    "youDidNotCollectAnyEntriesYet": "Sie haben noch keine Einträge gesammelt",
-    "pleaseAuthenticateToShowContent": "Bitte authentifizieren Sie sich, um den Inhalt Ihrer Notiz anzuzeigen",
-    "areYouSure": "Sind Sie sicher?",
-    "cannotRemoveMainScreen": "Hauptbildschirm kann nicht entfernt werden. Sie verlieren die Möglichkeit, Tabs einzurichten.",
-    "today": "Heute",
-    "yesterday": "Gestern",
-    "thisWeek": "Diese Woche",
-    "lastTwoWeeks": "Letzte 2 Wochen",
-    "thisMonth": "Diesen Monat",
-    "thisYear": "Dieses Jahr",
-    "calendarDescription": "Hauptbildschirm mit Kalender der Einträge",
-    "insightsDescription": "Statistiken aller Ihrer Einträge",
-    "settingsDescription": "Bildschirm mit allen Einstellungen (Dunkelmodus, Sync usw.)",
-    "profileDescription": "Bildschirm mit Ihrem Profil",
-    "todayDescription": "Nur heutige Notizen",
-    "debugMenuDescription": "Entwicklertools zum Umschalten experimenteller Funktionen",
-    "noMindsForThisDay": "Keine Notizen für diesen Tag",
-    "showMindsForPeriod": "Notizen für {period} anzeigen",
-    "week": "Woche",
-    "password": "Passwort",
     "archivePassword": "Archiv-Passwort",
-    "enterPassword": "Passwort eingeben",
+    "areYouSure": "Sind Sie sicher?",
+    "audioFilesExported": "Audiodateien exportiert",
+    "audioFilesImported": "Audiodateien importiert",
+    "audioFilesToExport": "Audiodateien",
+    "calendarDescription": "Hauptbildschirm mit Kalender der Einträge",
+    "cannotRemoveMainScreen": "Hauptbildschirm kann nicht entfernt werden. Sie verlieren die Option, Tabs einzurichten.",
     "confirmPassword": "Passwort bestätigen",
-    "reenterPassword": "Passwort erneut eingeben",
-    "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
-    "exportPassword": "Export mit Passwort schützen?",
-    "exportPasswordDescription": "Fügen Sie ein Passwort hinzu, um Ihren Export zu verschlüsseln. Sie können dies überspringen für unverschlüsselten Export.",
-    "importPassword": "Passwort eingeben",
-    "importPasswordDescription": "Diese Datei ist passwortgeschützt. Bitte geben Sie das Passwort zum Entschlüsseln ein.",
-    "skipPassword": "Überspringen (kein Passwort)",
     "continue_": "Weiter",
+    "corruptedFile": "Beschädigte Datei",
+    "create": "Schreiben",
+    "debugMenuDescription": "Entwickler-Tools zum Umschalten experimenteller Funktionen",
+    "digest": "Zusammenfassung",
+    "enterPassword": "Passwort eingeben",
+    "error": "Fehler",
+    "exportError": "Export fehlgeschlagen",
+    "exportPassword": "In ZIP exportieren",
+    "exportPasswordDescription": "Fügen Sie ein Passwort hinzu, um Ihren Export zu verschlüsseln. Sie können dies für einen unverschlüsselten Export überspringen.",
+    "exportSuccess": "Export erfolgreich",
+    "hiddenTabs": "Versteckte Tabs",
+    "importError": "Import fehlgeschlagen",
+    "importPassword": "Passwort eingeben",
+    "importPasswordDescription": "Diese Datei ist passwortgeschützt. Bitte geben Sie das Passwort zur Entschlüsselung ein.",
+    "importSuccess": "Import erfolgreich",
     "incorrectPassword": "Falsches Passwort",
     "incorrectPasswordMessage": "Das eingegebene Passwort ist falsch. Bitte versuchen Sie es erneut.",
-    "corruptedFile": "Beschädigte Datei",
+    "insightsDescription": "Statistiken aller Ihrer Einträge",
+    "insufficientStorage": "Unzureichender Speicherplatz",
     "invalidFormat": "Ungültiges Format",
-    "missingAudioFiles": "Einige Audiodateien fehlen",
-    "insufficientStorage": "Unzureichender Speicher",
-    "unknownError": "Unbekannter Fehler",
-    "retry": "Wiederholen",
-    "ok": "OK",
-    "exportSuccess": "Export erfolgreich",
-    "exportError": "Export fehlgeschlagen",
-    "importSuccess": "Import erfolgreich",
-    "importError": "Import fehlgeschlagen",
-    "mindsToExport": "Notizen",
-    "audioFilesToExport": "Audiodateien",
+    "lastTwoWeeks": "Letzte 2 Wochen",
+    "minds": "Notizen",
     "mindsExported": "Notizen exportiert",
-    "audioFilesExported": "Audiodateien exportiert",
     "mindsImported": "Notizen importiert",
-    "audioFilesImported": "Audiodateien importiert"
+    "mindsToExport": "Notizen",
+    "missingAudioFiles": "Einige Audiodateien fehlen",
+    "noMindsForPeriod": "Keine Notizen für diesen Zeitraum",
+    "noMindsForThisDay": "Keine Notizen für diesen Tag",
+    "noMindsInSelectedPeriod": "Keine Notizen im ausgewählten Zeitraum",
+    "ok": "OK",
+    "onboardingMind1": "Hallo!",
+    "onboardingMind2": "Ich bin keklist - ein persönliches Tagebuch für kurze Notizen",
+    "onboardingMind2Comment1": "Notizen können kommentiert werden",
+    "onboardingMind2Comment2": "Um eine Notiz zu öffnen, tippen Sie darauf",
+    "onboardingMind3": "Im Tab 'Kalender' werden alle Notizen nach Tagen, Wochen und Monaten angezeigt",
+    "onboardingMind4": "Der Tab 'Analytik' zeigt eine kurze Statistik Ihrer Einträge",
+    "onboardingMind5": "Alle Notizen werden nur auf Ihrem Telefon gespeichert",
+    "onboardingMind6": "Um eine neue Notiz zu erstellen, tippen Sie auf 'Schreiben'",
+    "password": "Passwort",
+    "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+    "pleaseAuthenticateToShowContent": "Bitte authentifizieren Sie sich, um den Inhalt Ihrer Notiz anzuzeigen",
+    "profileDescription": "Bildschirm mit Ihrem Profil",
+    "randomMind": "Zufällige Notiz",
+    "reenterPassword": "Passwort erneut eingeben",
+    "retry": "Wiederholen",
+    "searchForYourNotes": "Suchen Sie nach Ihren Notizen",
+    "searchYourEmoji": "Suchen Sie nach Ihrem Emoji...",
+    "selectPeriod": "Zeitraum auswählen ...",
+    "send": "SENDEN",
+    "settingsDescription": "Bildschirm mit allen Einstellungen (Dunkler Modus, Synchronisierung usw.)",
+    "showMindsForPeriod": "Notizen anzeigen für {period}",
+    "skipPassword": "Überspringen (kein Passwort)",
+    "spectrum": "Spektrum",
+    "startDiscussion": "Diskussion beginnen",
+    "thisMonth": "Dieser Monat",
+    "thisWeek": "Diese Woche",
+    "thisYear": "Dieses Jahr",
+    "today": "Heute",
+    "todayDescription": "Nur heutige Notizen",
+    "todayMinds": "Heutige Notizen",
+    "topMinds": "Top-Notizen",
+    "unknownError": "Unbekannter Fehler",
+    "updateYourNickname": "Aktualisieren Sie Ihren Spitznamen",
+    "week": "Woche",
+    "writeSomething": "Schreiben Sie etwas...",
+    "yesterday": "Gestern",
+    "youDidNotCollectAnyEntriesYet": "Sie haben noch keine Einträge gesammelt",
+    "yourFolderName": "Ihr Ordnername",
+    "yourNickname": "Ihr Spitzname"
 }
