--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -50,78 +50,83 @@
     "enterTokenHere": "ここにトークンを入力",
     "token": "トークン",
     "clearCache": "キャッシュをクリア",
-    "developerModeEnabled": "🔧 開発者モードが有効になりました！Debug Menuタブが利用可能になりました！",
     "activeTabs": "アクティブなタブ",
-    "hiddenTabs": "非表示のタブ",
-    "error": "エラー",
-    "startDiscussion": "ディスカッションを開始",
-    "send": "送信",
-    "translateContent": "コンテンツを翻訳",
-    "sensitiveContent": "機密コンテンツ",
-    "updateYourNickname": "ニックネームを更新",
-    "yourNickname": "あなたのニックネーム",
-    "create": "書く",
-    "yourFolderName": "フォルダ名",
-    "noMindsInSelectedPeriod": "選択した期間にメモがありません",
-    "noMindsForPeriod": "この期間にメモがありません",
-    "selectPeriod": "期間を選択...",
-    "digest": "ダイジェスト",
-    "minds": "メモ",
-    "searchForYourNotes": "メモを検索",
-    "searchYourEmoji": "絵文字を検索...",
-    "writeSomething": "何か書いてください...",
-    "topMinds": "トップメモ",
-    "todayMinds": "今日のメモ",
-    "randomMind": "ランダムメモ",
-    "spectrum": "スペクトラム",
-    "youDidNotCollectAnyEntriesYet": "まだエントリを収集していません",
-    "pleaseAuthenticateToShowContent": "メモの内容を表示するには認証してください",
-    "areYouSure": "本当によろしいですか？",
-    "cannotRemoveMainScreen": "メイン画面を削除することはできません。タブの設定オプションが失われます。",
-    "today": "今日",
-    "yesterday": "昨日",
-    "thisWeek": "今週",
-    "lastTwoWeeks": "過去2週間",
-    "thisMonth": "今月",
-    "thisYear": "今年",
-    "calendarDescription": "エントリのカレンダーがあるメイン画面",
-    "insightsDescription": "すべてのエントリの統計",
-    "settingsDescription": "すべての設定画面（ダークモード、同期など）",
-    "profileDescription": "プロフィール画面",
-    "todayDescription": "今日のメモのみ",
-    "debugMenuDescription": "実験的機能を切り替える開発者ツール",
-    "noMindsForThisDay": "この日のメモはありません",
-    "showMindsForPeriod": "{period}のメモを表示",
-    "week": "週",
-    "password": "パスワード",
     "archivePassword": "アーカイブパスワード",
-    "enterPassword": "パスワードを入力",
+    "areYouSure": "よろしいですか？",
+    "audioFilesExported": "音声ファイルをエクスポートしました",
+    "audioFilesImported": "音声ファイルをインポートしました",
+    "audioFilesToExport": "音声ファイル",
+    "calendarDescription": "エントリーのカレンダーがあるメイン画面",
+    "cannotRemoveMainScreen": "メイン画面は削除できません。タブを設定するオプションが失われます。",
     "confirmPassword": "パスワードを確認",
-    "reenterPassword": "パスワードを再入力",
-    "passwordsDoNotMatch": "パスワードが一致しません",
-    "exportPassword": "エクスポートをパスワードで保護しますか？",
+    "continue_": "続ける",
+    "corruptedFile": "破損したファイル",
+    "create": "書く",
+    "debugMenuDescription": "実験的な機能を切り替えるための開発者ツール",
+    "digest": "ダイジェスト",
+    "enterPassword": "パスワードを入力",
+    "error": "エラー",
+    "exportError": "エクスポートに失敗しました",
+    "exportPassword": "ZIPにエクスポート",
     "exportPasswordDescription": "エクスポートを暗号化するためにパスワードを追加します。暗号化しない場合はスキップできます。",
+    "exportSuccess": "エクスポートに成功しました",
+    "hiddenTabs": "非表示のタブ",
+    "importError": "インポートに失敗しました",
     "importPassword": "パスワードを入力",
     "importPasswordDescription": "このファイルはパスワードで保護されています。復号化するためにパスワードを入力してください。",
-    "skipPassword": "スキップ（パスワードなし）",
-    "continue_": "続ける",
+    "importSuccess": "インポートに成功しました",
     "incorrectPassword": "パスワードが正しくありません",
     "incorrectPasswordMessage": "入力されたパスワードが正しくありません。もう一度お試しください。",
-    "corruptedFile": "破損したファイル",
-    "invalidFormat": "無効な形式",
-    "missingAudioFiles": "一部の音声ファイルが見つかりません",
+    "insightsDescription": "すべてのエントリーの統計",
     "insufficientStorage": "ストレージ容量が不足しています",
-    "unknownError": "不明なエラー",
-    "retry": "再試行",
+    "invalidFormat": "無効な形式",
+    "lastTwoWeeks": "過去2週間",
+    "minds": "メモ",
+    "mindsExported": "メモをエクスポートしました",
+    "mindsImported": "メモをインポートしました",
+    "mindsToExport": "メモ",
+    "missingAudioFiles": "一部の音声ファイルが見つかりません",
+    "noMindsForPeriod": "この期間のメモはありません",
+    "noMindsForThisDay": "この日のメモはありません",
+    "noMindsInSelectedPeriod": "選択した期間にメモはありません",
     "ok": "OK",
-    "exportSuccess": "エクスポート成功",
-    "exportError": "エクスポート失敗",
-    "importSuccess": "インポート成功",
-    "importError": "インポート失敗",
-    "mindsToExport": "マインド",
-    "audioFilesToExport": "音声ファイル",
-    "mindsExported": "マインドをエクスポートしました",
-    "audioFilesExported": "音声ファイルをエクスポートしました",
-    "mindsImported": "マインドをインポートしました",
-    "audioFilesImported": "音声ファイルをインポートしました"
+    "onboardingMind1": "こんにちは！",
+    "onboardingMind2": "私はkeklist - 短いメモの個人日記です",
+    "onboardingMind2Comment1": "メモにはコメントを付けることができます",
+    "onboardingMind2Comment2": "メモを開くには、タップしてください",
+    "onboardingMind3": "「カレンダー」タブでは、すべてのメモが日、週、月ごとに表示されます",
+    "onboardingMind4": "「分析」タブでは、エントリーの簡単な統計が表示されます",
+    "onboardingMind5": "すべてのメモはあなたのスマートフォンにのみ保存されます",
+    "onboardingMind6": "新しいメモを作成するには、'書く'をタップしてください",
+    "password": "パスワード",
+    "passwordsDoNotMatch": "パスワードが一致しません",
+    "pleaseAuthenticateToShowContent": "メモの内容を表示するには認証してください",
+    "profileDescription": "あなたのプロフィールの画面",
+    "randomMind": "ランダムなメモ",
+    "reenterPassword": "パスワードを再入力",
+    "retry": "再試行",
+    "searchForYourNotes": "メモを検索",
+    "searchYourEmoji": "絵文字を検索...",
+    "selectPeriod": "期間を選択...",
+    "send": "送信",
+    "settingsDescription": "すべての設定の画面（ダークモード、同期など）",
+    "showMindsForPeriod": "{period}のメモを表示",
+    "skipPassword": "スキップ（パスワードなし）",
+    "spectrum": "スペクトラム",
+    "startDiscussion": "ディスカッションを開始",
+    "thisMonth": "今月",
+    "thisWeek": "今週",
+    "thisYear": "今年",
+    "today": "今日",
+    "todayDescription": "今日のメモのみ",
+    "todayMinds": "今日のメモ",
+    "topMinds": "トップメモ",
+    "unknownError": "不明なエラー",
+    "updateYourNickname": "ニックネームを更新",
+    "week": "週",
+    "writeSomething": "何か書いてください...",
+    "yesterday": "昨日",
+    "youDidNotCollectAnyEntriesYet": "まだエントリーを収集していません",
+    "yourFolderName": "あなたのフォルダー名",
+    "yourNickname": "あなたのニックネーム"
 }
