--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -194,10 +194,6 @@
     "@clearCache": {
         "description": "Кэшти тазалоо баскычы"
     },
-    "developerModeEnabled": "🔧 Өнүктүрүүчү режими иштетилди! Debug Menu табы азыр жеткиликтүү!",
-    "@developerModeEnabled": {
-        "description": "Өнүктүрүүчү режими иштетилген билдирүүсү"
-    },
     "activeTabs": "Актив табтар",
     "@activeTabs": {
         "description": "Актив табтар бөлүмүнүн башчысы"
@@ -217,14 +213,6 @@
     "send": "ЖӨНӨТҮҮ",
     "@send": {
         "description": "Жөнөтүү баскычы"
-    },
-    "translateContent": "Мазмунду которуу",
-    "@translateContent": {
-        "description": "Мазмунду которуу debug варианты"
-    },
-    "sensitiveContent": "Сезимтал мазмун",
-    "@sensitiveContent": {
-        "description": "Сезимтал мазмун debug варианты"
     },
     "updateYourNickname": "Никнэмиңизди жаңылоо",
     "@updateYourNickname": {
@@ -398,5 +386,13 @@
     "mindsExported": "Ойлор экспортталды",
     "audioFilesExported": "Аудио файлдар экспортталды",
     "mindsImported": "Ойлор импортталды",
-    "audioFilesImported": "Аудио файлдар импортталды"
+    "audioFilesImported": "Аудио файлдар импортталды",
+    "onboardingMind1": "Салам!",
+    "onboardingMind2": "Мен keklist - кыска жазуулардын жеке күндөлүгүмүн",
+    "onboardingMind2Comment1": "Жазууларга комментарий жазса болот",
+    "onboardingMind2Comment2": "Жазууну ачуу үчүн аны басыңыз",
+    "onboardingMind3": "'Жылнаама' өтмөгүндө бардык жазуулар күндөр, жумалар жана айлар боюнча көрсөтүлөт",
+    "onboardingMind4": "'Аналитика' өтмөгү жазууларыңыздын кыскача статистикасын көрсөтөт",
+    "onboardingMind5": "Бардык жазуулар телефонуңузда гана сакталат",
+    "onboardingMind6": "Жаңы жазуу жасоо үчүн 'Жазуу' баскычын басыңыз"
 }
