--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -50,78 +50,83 @@
     "enterTokenHere": "Введите токен здесь",
     "token": "Токен",
     "clearCache": "Очистить кэш",
-    "developerModeEnabled": "🔧 Режим разработчика включен! Вкладка Debug Menu теперь доступна!",
     "activeTabs": "Активные вкладки",
-    "hiddenTabs": "Скрытые вкладки",
-    "error": "Ошибка",
-    "startDiscussion": "Начать обсуждение",
-    "send": "ОТПРАВИТЬ",
-    "translateContent": "Перевести содержимое",
-    "sensitiveContent": "Конфиденциальный контент",
-    "updateYourNickname": "Обновить ваш никнейм",
-    "yourNickname": "Ваш никнейм",
-    "create": "Написать",
-    "yourFolderName": "Название вашей папки",
-    "noMindsInSelectedPeriod": "Нет заметок в выбранном периоде",
-    "noMindsForPeriod": "Нет заметок за этот период",
-    "selectPeriod": "Выбрать период ...",
-    "digest": "Сводка",
-    "minds": "Заметки",
-    "searchForYourNotes": "Поиск по вашим заметкам",
-    "searchYourEmoji": "Поиск вашего эмодзи...",
-    "writeSomething": "Напишите что-нибудь...",
-    "topMinds": "Топ заметок",
-    "todayMinds": "Заметки сегодня",
-    "randomMind": "Случайная заметка",
-    "spectrum": "Спектр",
-    "youDidNotCollectAnyEntriesYet": "Вы еще не собрали ни одной записи",
-    "pleaseAuthenticateToShowContent": "Пожалуйста, аутентифицируйтесь, чтобы показать содержимое вашей заметки",
+    "archivePassword": "Пароль архива",
     "areYouSure": "Вы уверены?",
-    "cannotRemoveMainScreen": "Нельзя удалить главный экран. Вы потеряете возможность настройки вкладок.",
-    "today": "Сегодня",
-    "yesterday": "Вчера",
-    "thisWeek": "На этой неделе",
-    "lastTwoWeeks": "За последние 2 недели",
-    "thisMonth": "В этом месяце",
-    "thisYear": "В этом году",
+    "audioFilesExported": "Аудиофайлы экспортированы",
+    "audioFilesImported": "Аудиофайлы импортированы",
+    "audioFilesToExport": "Аудиофайлы",
     "calendarDescription": "Главный экран с календарем записей",
-    "insightsDescription": "Статистика всех ваших записей",
-    "settingsDescription": "Экран со всеми настройками (темный режим, синхронизация и т.д.)",
-    "profileDescription": "Экран с вашим профилем",
-    "todayDescription": "Только сегодняшние заметки",
-    "debugMenuDescription": "Инструменты разработчика для переключения экспериментальных функций",
-    "noMindsForThisDay": "Нет заметок на этот день",
-    "showMindsForPeriod": "Показать заметки за {period}",
-    "week": "Неделя",
-    "password": "Пароль",
-    "archivePassword": "Пароль для архива",
-    "enterPassword": "Введите пароль",
+    "cannotRemoveMainScreen": "Невозможно удалить главный экран. Вы потеряете возможность настраивать вкладки.",
     "confirmPassword": "Подтвердите пароль",
-    "reenterPassword": "Введите пароль повторно",
-    "passwordsDoNotMatch": "Пароли не совпадают",
+    "continue_": "Продолжить",
+    "corruptedFile": "Поврежденный файл",
+    "create": "Написать",
+    "debugMenuDescription": "Инструменты разработчика для переключения экспериментальных функций",
+    "digest": "Сводка",
+    "enterPassword": "Введите пароль",
+    "error": "Ошибка",
+    "exportError": "Экспорт не удался",
     "exportPassword": "Экспорт в ZIP",
     "exportPasswordDescription": "Добавьте пароль для шифрования экспорта. Вы можете пропустить это для незашифрованного экспорта.",
+    "exportSuccess": "Экспорт выполнен успешно",
+    "hiddenTabs": "Скрытые вкладки",
+    "importError": "Импорт не удался",
     "importPassword": "Введите пароль",
     "importPasswordDescription": "Этот файл защищен паролем. Пожалуйста, введите пароль для расшифровки.",
-    "skipPassword": "Пропустить (без пароля)",
-    "continue_": "Продолжить",
+    "importSuccess": "Импорт выполнен успешно",
     "incorrectPassword": "Неверный пароль",
-    "incorrectPasswordMessage": "Введенный вами пароль неверен. Пожалуйста, попробуйте снова.",
-    "corruptedFile": "Поврежденный файл",
+    "incorrectPasswordMessage": "Введенный пароль неверен. Пожалуйста, попробуйте снова.",
+    "insightsDescription": "Статистика всех ваших записей",
+    "insufficientStorage": "Недостаточно памяти",
     "invalidFormat": "Неверный формат",
+    "lastTwoWeeks": "Последние 2 недели",
+    "minds": "Заметки",
+    "mindsExported": "Заметки экспортированы",
+    "mindsImported": "Заметки импортированы",
+    "mindsToExport": "Заметки",
     "missingAudioFiles": "Некоторые аудиофайлы отсутствуют",
-    "insufficientStorage": "Недостаточно места",
-    "unknownError": "Неизвестная ошибка",
-    "retry": "Повторить",
+    "noMindsForPeriod": "Нет заметок за этот период",
+    "noMindsForThisDay": "Нет заметок за этот день",
+    "noMindsInSelectedPeriod": "Нет заметок в выбранном периоде",
     "ok": "OK",
-    "exportSuccess": "Экспорт успешен",
-    "exportError": "Ошибка экспорта",
-    "importSuccess": "Импорт успешен",
-    "importError": "Ошибка импорта",
-    "mindsToExport": "Заметок",
-    "audioFilesToExport": "Аудиофайлов",
-    "mindsExported": "Заметок экспортировано",
-    "audioFilesExported": "Аудиофайлов экспортировано",
-    "mindsImported": "Заметок импортировано",
-    "audioFilesImported": "Аудиофайлов импортировано"
+    "onboardingMind1": "Привет!",
+    "onboardingMind2": "Я keklist - личный дневник коротких заметок",
+    "onboardingMind2Comment1": "Заметки можно комментировать",
+    "onboardingMind2Comment2": "Чтобы открыть заметку, нажмите на неё",
+    "onboardingMind3": "На вкладке 'Календарь' все заметки отображаются по дням, неделям и месяцам",
+    "onboardingMind4": "Вкладка 'Аналитика' показывает краткую статистику ваших записей",
+    "onboardingMind5": "Все заметки хранятся только на вашем телефоне",
+    "onboardingMind6": "Чтобы создать новую заметку, нажмите 'Написать'",
+    "password": "Пароль",
+    "passwordsDoNotMatch": "Пароли не совпадают",
+    "pleaseAuthenticateToShowContent": "Пожалуйста, пройдите аутентификацию для отображения содержимого вашей заметки",
+    "profileDescription": "Экран с вашим профилем",
+    "randomMind": "Случайная заметка",
+    "reenterPassword": "Введите пароль повторно",
+    "retry": "Повторить",
+    "searchForYourNotes": "Поиск ваших заметок",
+    "searchYourEmoji": "Поиск вашего эмодзи...",
+    "selectPeriod": "Выберите период ...",
+    "send": "ОТПРАВИТЬ",
+    "settingsDescription": "Экран со всеми настройками (темный режим, синхронизация и т.д.)",
+    "showMindsForPeriod": "Показать заметки за {period}",
+    "skipPassword": "Пропустить (без пароля)",
+    "spectrum": "Спектр",
+    "startDiscussion": "Начать обсуждение",
+    "thisMonth": "Этот месяц",
+    "thisWeek": "Эта неделя",
+    "thisYear": "Этот год",
+    "today": "Сегодня",
+    "todayDescription": "Только сегодняшние заметки",
+    "todayMinds": "Сегодняшние заметки",
+    "topMinds": "Топ заметок",
+    "unknownError": "Неизвестная ошибка",
+    "updateYourNickname": "Обновите ваш никнейм",
+    "week": "Неделя",
+    "writeSomething": "Напишите что-нибудь...",
+    "yesterday": "Вчера",
+    "youDidNotCollectAnyEntriesYet": "Вы еще не собрали ни одной записи",
+    "yourFolderName": "Название вашей папки",
+    "yourNickname": "Ваш никнейм"
 }
