--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -50,78 +50,83 @@
     "enterTokenHere": "Унесите токен овде",
     "token": "Токен",
     "clearCache": "Очисти кеш",
-    "developerModeEnabled": "🔧 Режим програмера укључен! Debug Menu картица је сада доступна!",
     "activeTabs": "Активне картице",
-    "hiddenTabs": "Скривене картице",
-    "error": "Грешка",
-    "startDiscussion": "Почни дискусију",
-    "send": "ПОШАЉИ",
-    "translateContent": "Преведи садржај",
-    "sensitiveContent": "Осетљиви садржај",
-    "updateYourNickname": "Ажурирај свој надимак",
-    "yourNickname": "Ваш надимак",
-    "create": "Напиши",
-    "yourFolderName": "Име ваше фасцикле",
-    "noMindsInSelectedPeriod": "Нема белешки у изабраном периоду",
-    "noMindsForPeriod": "Нема белешки за овај период",
-    "selectPeriod": "Изабери период ...",
-    "digest": "Сажетак",
-    "minds": "Белешке",
-    "searchForYourNotes": "Претражи ваше белешке",
-    "searchYourEmoji": "Претражи ваше емоџи...",
-    "writeSomething": "Напишите нешто...",
-    "topMinds": "Топ белешке",
-    "todayMinds": "Данашње белешке",
-    "randomMind": "Насумична белешка",
-    "spectrum": "Спектар",
-    "youDidNotCollectAnyEntriesYet": "Још нисте прикупили ниједан унос",
-    "pleaseAuthenticateToShowContent": "Молимо аутентификујте се да прикажете садржај ваше белешке",
-    "areYouSure": "Да ли сте сигурни?",
-    "cannotRemoveMainScreen": "Не можете уклонити главни екран. Изгубићете могућност подешавања картица.",
-    "today": "Данас",
-    "yesterday": "Јуче",
-    "thisWeek": "Ове недеље",
-    "lastTwoWeeks": "За последња 2 месеца",
-    "thisMonth": "Овог месеца",
-    "thisYear": "Ове године",
-    "calendarDescription": "Главни екран са календаром уноса",
-    "insightsDescription": "Статистика свих ваших уноса",
-    "settingsDescription": "Екран са свим подешавањима (тамни режим, синхронизација и сл.)",
-    "profileDescription": "Екран са вашим профилом",
-    "todayDescription": "Само данашње белешке",
-    "debugMenuDescription": "Алати за програмере за пребацивање експерименталних функција",
-    "noMindsForThisDay": "Нема белешки за овај дан",
-    "showMindsForPeriod": "Прикажи белешке за {period}",
-    "week": "Недеља",
-    "password": "Лозинка",
     "archivePassword": "Лозинка архиве",
-    "enterPassword": "Унеси лозинку",
+    "areYouSure": "Да ли сте сигурни?",
+    "audioFilesExported": "Аудио фајлови извезени",
+    "audioFilesImported": "Аудио фајлови увезени",
+    "audioFilesToExport": "Аудио фајлови",
+    "calendarDescription": "Главни екран са календаром уноса",
+    "cannotRemoveMainScreen": "Није могуће уклонити главни екран. Изгубићеш опцију да подесиш картице.",
     "confirmPassword": "Потврди лозинку",
-    "reenterPassword": "Поново унеси лозинку",
-    "passwordsDoNotMatch": "Лозинке се не подударају",
-    "exportPassword": "Заштитити извоз лозинком?",
-    "exportPasswordDescription": "Додај лозинку да шифрујеш извоз. Можеш прескочити за нешифровани извоз.",
-    "importPassword": "Унеси лозинку",
-    "importPasswordDescription": "Овај фајл је заштићен лозинком. Унеси лозинку да дешифрујеш.",
-    "skipPassword": "Прескочи (без лозинке)",
     "continue_": "Настави",
+    "corruptedFile": "Оштећени фајл",
+    "create": "Напиши",
+    "debugMenuDescription": "Алати за програмере за укључивање експерименталних функција",
+    "digest": "Сажетак",
+    "enterPassword": "Унеси лозинку",
+    "error": "Грешка",
+    "exportError": "Извоз није успео",
+    "exportPassword": "Извоз у ZIP",
+    "exportPasswordDescription": "Додај лозинку да шифрујеш свој извоз. Можеш да прескочиш ово за нешифровани извоз.",
+    "exportSuccess": "Извоз успешан",
+    "hiddenTabs": "Скривене картице",
+    "importError": "Увоз није успео",
+    "importPassword": "Унеси лозинку",
+    "importPasswordDescription": "Овај фајл је заштићен лозинком. Унеси лозинку за дешифровање.",
+    "importSuccess": "Увоз успешан",
     "incorrectPassword": "Нетачна лозинка",
     "incorrectPasswordMessage": "Лозинка коју си унео је нетачна. Покушај поново.",
-    "corruptedFile": "Оштећени фајл",
+    "insightsDescription": "Статистика свих твојих уноса",
+    "insufficientStorage": "Недовољно простора за складиштење",
     "invalidFormat": "Неважећи формат",
+    "lastTwoWeeks": "Последње 2 недеље",
+    "minds": "Белешке",
+    "mindsExported": "Белешке извезене",
+    "mindsImported": "Белешке увезене",
+    "mindsToExport": "Белешке",
     "missingAudioFiles": "Неки аудио фајлови недостају",
-    "insufficientStorage": "Недовољно меморије",
-    "unknownError": "Непозната грешка",
+    "noMindsForPeriod": "Нема белешки за овај период",
+    "noMindsForThisDay": "Нема белешки за овај дан",
+    "noMindsInSelectedPeriod": "Нема белешки у изабраном периоду",
+    "ok": "У реду",
+    "onboardingMind1": "Здраво!",
+    "onboardingMind2": "Ја сам keklist - лични дневник кратких белешки",
+    "onboardingMind2Comment1": "Белешке могу бити коментарисане",
+    "onboardingMind2Comment2": "Да отвориш белешку, притисни на њу",
+    "onboardingMind3": "У картици 'Календар' све белешке су приказане по данима, недељама и месецима",
+    "onboardingMind4": "Картица 'Аналитика' приказује кратку статистику твојих уноса",
+    "onboardingMind5": "Све белешке су сачуване само на твојом телефону",
+    "onboardingMind6": "Да креирате нову белешку, додирните 'Пиши'",
+    "password": "Лозинка",
+    "passwordsDoNotMatch": "Лозинке се не подударају",
+    "pleaseAuthenticateToShowContent": "Молим те аутентификуј се да би приказао садржај твоје белешке",
+    "profileDescription": "Екран са твојим профилом",
+    "randomMind": "Случајна белешка",
+    "reenterPassword": "Поново унеси лозинку",
     "retry": "Покушај поново",
-    "ok": "OK",
-    "exportSuccess": "Извоз успешан",
-    "exportError": "Извоз неуспешан",
-    "importSuccess": "Увоз успешан",
-    "importError": "Увоз неуспешан",
-    "mindsToExport": "Умови",
-    "audioFilesToExport": "Аудио фајлови",
-    "mindsExported": "Умови извезени",
-    "audioFilesExported": "Аудио фајлови извезени",
-    "mindsImported": "Умови увезени",
-    "audioFilesImported": "Аудио фајлови увезени"
+    "searchForYourNotes": "Претражи своје белешке",
+    "searchYourEmoji": "Претражи свој емоџи...",
+    "selectPeriod": "Изабери период ...",
+    "send": "ПОШАЉИ",
+    "settingsDescription": "Екран са свим подешавањима (тамни режим, синхронизација итд.)",
+    "showMindsForPeriod": "Прикажи белешке за {period}",
+    "skipPassword": "Прескочи (без лозинке)",
+    "spectrum": "Спектар",
+    "startDiscussion": "Почни дискусију",
+    "thisMonth": "Овај месец",
+    "thisWeek": "Ова недеља",
+    "thisYear": "Ова година",
+    "today": "Данас",
+    "todayDescription": "Само данашње белешке",
+    "todayMinds": "Данашње белешке",
+    "topMinds": "Топ белешке",
+    "unknownError": "Непозната грешка",
+    "updateYourNickname": "Ажурирај свој надимак",
+    "week": "Недеља",
+    "writeSomething": "Напиши нешто...",
+    "yesterday": "Јуче",
+    "youDidNotCollectAnyEntriesYet": "Још увек ниси прикупио ниједан унос",
+    "yourFolderName": "Назив твог фолдера",
+    "yourNickname": "Твој надимак"
 }
