--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -50,78 +50,83 @@
     "enterTokenHere": "在此输入令牌",
     "token": "令牌",
     "clearCache": "清除缓存",
-    "developerModeEnabled": "🔧 开发者模式已启用！Debug Menu标签页现在可用！",
     "activeTabs": "活动标签页",
-    "hiddenTabs": "隐藏标签页",
-    "error": "错误",
-    "startDiscussion": "开始讨论",
-    "send": "发送",
-    "translateContent": "翻译内容",
-    "sensitiveContent": "敏感内容",
-    "updateYourNickname": "更新您的昵称",
-    "yourNickname": "您的昵称",
-    "create": "写",
-    "yourFolderName": "您的文件夹名称",
-    "noMindsInSelectedPeriod": "所选期间内没有笔记",
-    "noMindsForPeriod": "此期间没有笔记",
-    "selectPeriod": "选择期间...",
-    "digest": "摘要",
-    "minds": "笔记",
-    "searchForYourNotes": "搜索您的笔记",
-    "searchYourEmoji": "搜索您的表情符号...",
-    "writeSomething": "写点什么...",
-    "topMinds": "热门笔记",
-    "todayMinds": "今日笔记",
-    "randomMind": "随机笔记",
-    "spectrum": "光谱",
-    "youDidNotCollectAnyEntriesYet": "您还没有收集任何条目",
-    "pleaseAuthenticateToShowContent": "请验证身份以显示您的笔记内容",
+    "archivePassword": "归档密码",
     "areYouSure": "您确定吗？",
-    "cannotRemoveMainScreen": "无法删除主屏幕。您将失去设置标签页的选项。",
-    "today": "今天",
-    "yesterday": "昨天",
-    "thisWeek": "本周",
-    "lastTwoWeeks": "过去2周",
-    "thisMonth": "本月",
-    "thisYear": "今年",
+    "audioFilesExported": "音频文件已导出",
+    "audioFilesImported": "音频文件已导入",
+    "audioFilesToExport": "音频文件",
     "calendarDescription": "带有条目日历的主屏幕",
-    "insightsDescription": "所有条目的统计",
-    "settingsDescription": "包含所有设置的屏幕（深色模式、同步等）",
-    "profileDescription": "您的个人资料屏幕",
-    "todayDescription": "仅今日笔记",
-    "debugMenuDescription": "用于切换实验功能的开发工具",
-    "noMindsForThisDay": "今天没有笔记",
-    "showMindsForPeriod": "显示{period}的笔记",
-    "week": "周",
-    "password": "密码",
-    "archivePassword": "存档密码",
-    "enterPassword": "输入密码",
+    "cannotRemoveMainScreen": "无法删除主屏幕。您将失去设置标签页的选项。",
     "confirmPassword": "确认密码",
-    "reenterPassword": "重新输入密码",
-    "passwordsDoNotMatch": "密码不匹配",
-    "exportPassword": "是否为导出设置密码保护？",
-    "exportPasswordDescription": "添加密码以加密您的导出。您可以跳过此步骤以进行未加密的导出。",
-    "importPassword": "输入密码",
-    "importPasswordDescription": "此文件已加密保护。请输入密码以解密。",
-    "skipPassword": "跳过（无密码）",
     "continue_": "继续",
+    "corruptedFile": "文件已损坏",
+    "create": "写",
+    "debugMenuDescription": "用于切换实验性功能的开发者工具",
+    "digest": "摘要",
+    "enterPassword": "输入密码",
+    "error": "错误",
+    "exportError": "导出失败",
+    "exportPassword": "导出为ZIP",
+    "exportPasswordDescription": "添加密码以加密您的导出。您可以跳过此步骤进行不加密导出。",
+    "exportSuccess": "导出成功",
+    "hiddenTabs": "隐藏标签页",
+    "importError": "导入失败",
+    "importPassword": "输入密码",
+    "importPasswordDescription": "此文件受密码保护。请输入密码以解密。",
+    "importSuccess": "导入成功",
     "incorrectPassword": "密码错误",
     "incorrectPasswordMessage": "您输入的密码不正确。请重试。",
-    "corruptedFile": "文件已损坏",
-    "invalidFormat": "格式无效",
-    "missingAudioFiles": "部分音频文件丢失",
+    "insightsDescription": "所有条目的统计信息",
     "insufficientStorage": "存储空间不足",
-    "unknownError": "未知错误",
-    "retry": "重试",
+    "invalidFormat": "格式无效",
+    "lastTwoWeeks": "最近2周",
+    "minds": "笔记",
+    "mindsExported": "笔记已导出",
+    "mindsImported": "笔记已导入",
+    "mindsToExport": "笔记",
+    "missingAudioFiles": "某些音频文件缺失",
+    "noMindsForPeriod": "此期间没有笔记",
+    "noMindsForThisDay": "这一天没有笔记",
+    "noMindsInSelectedPeriod": "所选期间没有笔记",
     "ok": "确定",
-    "exportSuccess": "导出成功",
-    "exportError": "导出失败",
-    "importSuccess": "导入成功",
-    "importError": "导入失败",
-    "mindsToExport": "思绪",
-    "audioFilesToExport": "音频文件",
-    "mindsExported": "思绪已导出",
-    "audioFilesExported": "音频文件已导出",
-    "mindsImported": "思绪已导入",
-    "audioFilesImported": "音频文件已导入"
+    "onboardingMind1": "你好！",
+    "onboardingMind2": "我是keklist - 一个短笔记的个人日记",
+    "onboardingMind2Comment1": "笔记可以添加评论",
+    "onboardingMind2Comment2": "要打开笔记，请点击它",
+    "onboardingMind3": "在'日历'标签页中，所有笔记按天、周和月显示",
+    "onboardingMind4": "'分析'标签页显示您条目的简要统计信息",
+    "onboardingMind5": "所有笔记仅存储在您的手机上",
+    "onboardingMind6": "要创建新笔记，请点击'写入'",
+    "password": "密码",
+    "passwordsDoNotMatch": "密码不匹配",
+    "pleaseAuthenticateToShowContent": "请进行身份验证以显示您的笔记内容",
+    "profileDescription": "您的个人资料屏幕",
+    "randomMind": "随机笔记",
+    "reenterPassword": "重新输入密码",
+    "retry": "重试",
+    "searchForYourNotes": "搜索您的笔记",
+    "searchYourEmoji": "搜索您的表情符号...",
+    "selectPeriod": "选择期间...",
+    "send": "发送",
+    "settingsDescription": "包含所有设置的屏幕（深色模式、同步等）",
+    "showMindsForPeriod": "显示{period}的笔记",
+    "skipPassword": "跳过（无密码）",
+    "spectrum": "光谱",
+    "startDiscussion": "开始讨论",
+    "thisMonth": "本月",
+    "thisWeek": "本周",
+    "thisYear": "今年",
+    "today": "今天",
+    "todayDescription": "仅今天的笔记",
+    "todayMinds": "今天的笔记",
+    "topMinds": "热门笔记",
+    "unknownError": "未知错误",
+    "updateYourNickname": "更新您的昵称",
+    "week": "周",
+    "writeSomething": "写点什么...",
+    "yesterday": "昨天",
+    "youDidNotCollectAnyEntriesYet": "您还没有收集任何条目",
+    "yourFolderName": "您的文件夹名称",
+    "yourNickname": "您的昵称"
 }
