--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -394,5 +394,8 @@
     "onboardingMind3": "En la pestaña 'Calendario', todas las notas se muestran por días, semanas y meses",
     "onboardingMind4": "La pestaña 'Estadísticas' muestra breves estadísticas de tus entradas",
     "onboardingMind5": "Todas las notas se almacenan solo en tu teléfono",
-    "onboardingMind6": "Para crear una nueva nota, toca 'Escribir'"
+    "onboardingMind6": "Para crear una nueva nota, toca 'Escribir'",
+    "viewPhotos": "Ver fotos",
+    "noPhotosForDay": "No se encontraron fotos para este día",
+    "photosFromDay": "Fotos del {date}"
 }
