--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -394,5 +394,8 @@
     "onboardingMind3": "Nella scheda 'Calendario', tutte le note sono visualizzate per giorni, settimane e mesi",
     "onboardingMind4": "La scheda 'Statistiche' mostra brevi statistiche delle tue voci",
     "onboardingMind5": "Tutte le note sono memorizzate solo sul tuo telefono",
-    "onboardingMind6": "Per creare una nuova nota, tocca 'Scrivi'"
+    "onboardingMind6": "Per creare una nuova nota, tocca 'Scrivi'",
+    "viewPhotos": "Visualizza foto",
+    "noPhotosForDay": "Nessuna foto trovata per questo giorno",
+    "photosFromDay": "Foto del {date}"
 }
