--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -394,5 +394,8 @@
     "onboardingMind3": "'Күнтізбе' қойындысында барлық жазбалар күндер, апталар және айлар бойынша көрсетіледі",
     "onboardingMind4": "'Аналитика' қойындысы жазбаларыңыздың қысқаша статистикасын көрсетеді",
     "onboardingMind5": "Барлық жазбалар тек телефоныңызда сақталады",
-    "onboardingMind6": "Жаңа жазба жасау үшін 'Жазу' түймесін басыңыз"
+    "onboardingMind6": "Жаңа жазба жасау үшін 'Жазу' түймесін басыңыз",
+    "viewPhotos": "Фотосуреттерді қарау",
+    "noPhotosForDay": "Бұл күнге фотосуреттер табылмады",
+    "photosFromDay": "{date} күнінің фотосуреттері"
 }
