--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -394,5 +394,8 @@
     "onboardingMind3": "'Жылнаама' өтмөгүндө бардык жазуулар күндөр, жумалар жана айлар боюнча көрсөтүлөт",
     "onboardingMind4": "'Аналитика' өтмөгү жазууларыңыздын кыскача статистикасын көрсөтөт",
     "onboardingMind5": "Бардык жазуулар телефонуңузда гана сакталат",
-    "onboardingMind6": "Жаңы жазуу жасоо үчүн 'Жазуу' баскычын басыңыз"
+    "onboardingMind6": "Жаңы жазуу жасоо үчүн 'Жазуу' баскычын басыңыз",
+    "viewPhotos": "Сүрөттөрдү көрүү",
+    "noPhotosForDay": "Бул күндө сүрөттөр табылган жок",
+    "photosFromDay": "{date} күнүнүн сүрөттөрү"
 }
