--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -128,5 +128,8 @@
     "yesterday": "Gestern",
     "youDidNotCollectAnyEntriesYet": "Sie haben noch keine Einträge gesammelt",
     "yourFolderName": "Ihr Ordnername",
-    "yourNickname": "Ihr Spitzname"
+    "yourNickname": "Ihr Spitzname",
+    "viewPhotos": "Fotos ansehen",
+    "noPhotosForDay": "Keine Fotos für diesen Tag gefunden",
+    "photosFromDay": "Fotos vom {date}"
 }
