--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -394,5 +394,8 @@
     "onboardingMind3": "U kartici 'Kalendar', sve beleške su prikazane po danima, nedeljama i mesecima",
     "onboardingMind4": "Kartica 'Analitika' prikazuje kratku statistiku vaših unosa",
     "onboardingMind5": "Sve beleške se čuvaju samo na vašem telefonu",
-    "onboardingMind6": "Da kreirate novu belešku, dodirnite 'Piši'"
+    "onboardingMind6": "Da kreirate novu belešku, dodirnite 'Piši'",
+    "viewPhotos": "Pogledaj fotografije",
+    "noPhotosForDay": "Nema fotografija za ovaj dan",
+    "photosFromDay": "Fotografije od {date}"
 }
